@@ -3,8 +3,9 @@ package cool.muyucloud.beehave.config;
 import com.google.gson.*;
 import cool.muyucloud.beehave.Beehave;
 import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.registry.Registries;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.registry.Registry;
+import org.apache.commons.io.IOUtils;
 import org.apache.logging.log4j.Logger;
 
 import java.io.InputStream;
@@ -14,6 +15,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.Set;
 
 public class Config {
@@ -70,7 +72,8 @@ public class Config {
 
     public Set<String> getProperties() {
         HashSet<String> out = new HashSet<>();
-        for (String key : this.content.keySet()) {
+        for (Map.Entry<String, JsonElement> entry : this.content.entrySet()) {
+            String key = entry.getKey();
             if (this.content.get(key).isJsonArray()) {
                 continue;
             }
@@ -81,7 +84,7 @@ public class Config {
 
     public Class<? extends Serializable> getType(String key) {
         if (!this.content.has(key)) {
-            throw new NullPointerException("Tried to access property %s but it does not exists!".formatted(key));
+            throw new NullPointerException(String.format("Tried to access property %s but it does not exists!", key));
         }
         JsonPrimitive primitive = this.content.getAsJsonPrimitive(key);
         if (primitive.isBoolean()) {
@@ -139,7 +142,7 @@ public class Config {
             try {
                 Files.createFile(CONFIG_PATH);
             } catch (Exception e) {
-                LOGGER.error("Failed to generate config file at %s.".formatted(CONFIG_PATH));
+                LOGGER.error(String.format("Failed to generate config file at %s.", CONFIG_PATH));
                 e.printStackTrace();
                 return false;
             }
@@ -150,7 +153,7 @@ public class Config {
     private void readFile() {
         try (InputStream stream = Files.newInputStream(CONFIG_PATH)) {
             JsonObject object = (new Gson()).fromJson(
-                new String(stream.readAllBytes(), StandardCharsets.UTF_8),
+                IOUtils.toString(stream, StandardCharsets.UTF_8),
                 JsonObject.class
             );
             this.readConfig(object);
@@ -168,7 +171,8 @@ public class Config {
     }
 
     private void readProperties(JsonObject object) {
-        for (String key : object.keySet()) {
+        for (Map.Entry<String, JsonElement> entry : object.entrySet()) {
+            String key = entry.getKey();
             if (this.content.has(key)) {
                 JsonPrimitive dst = this.content.getAsJsonPrimitive(key);
                 JsonPrimitive src = object.getAsJsonPrimitive(key);
@@ -191,7 +195,7 @@ public class Config {
         JsonArray src = object.getAsJsonArray(key);
         for (JsonElement element : src) {
             Identifier id = new Identifier(element.getAsString());
-            if (Registries.ITEM.containsId(id)) {
+            if (Registry.ITEM.containsId(id)) {
                 dst.add(id.toString());
             }
         }
