@@ -3,6 +3,7 @@ package cool.muyucloud.beehave.util;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import cool.muyucloud.beehave.Beehave;
+import net.minecraft.text.LiteralText;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Text;
 import org.apache.commons.io.IOUtils;
@@ -28,9 +29,9 @@ public class Translator {
 
     public MutableText translate(String key, Object... args) {
         if (mappings.containsKey(key)) {
-            return Text.literal((mappings.get(key).formatted(args)));
+            return new LiteralText(String.format(mappings.get(key), args));
         } else {
-            return Text.literal(key);
+            return new LiteralText(key);
         }
     }
 
@@ -44,11 +45,11 @@ public class Translator {
             json = IOUtils.toString(
                 Objects.requireNonNull(
                     Translator.class.getClassLoader().getResource(
-                        "assets/beehave/lang/%s.json"
-                            .formatted(this.langName))),
+                        String.format("assets/beehave/lang/%s.json",
+                            this.langName))),
                 StandardCharsets.UTF_8);
         } catch (Exception e) {
-            Beehave.LOGGER.error("target language file %s not present".formatted(this.langName));
+            Beehave.LOGGER.error(String.format("target language file %s not present", this.langName));
             this.bad = true;
         }
         return new Gson().fromJson(json, new TypeToken<HashMap<String, String>>() {}.getType());
